fix overflow

--- a/src/global.scss
+++ b/src/global.scss
@@ -14,6 +14,7 @@
 html {
     font-size: 100%;
     font-family: 'Poppins', sans-serif;
+    overflow-x: hidden;
 }
 
 body {
